<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_forhandler"
            android:icon="@drawable/parking_icon"
            android:title="@string/menu_find_forhandler" />
        <item
            android:id="@+id/nav_forhandlere"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_forhandlere" />
        <item
            android:id="@+id/nav_om_ToolBeer"
            android:icon="@drawable/ToolBeer_Hvid"
            android:title="@string/menu_om_To_Øl" />
        <item
            android:id="@+id/nav_indstillinger"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_indstillinger" />
    </group>
</menu>